Switch from URL to URI for FTP path parsing